--- a/index.html
+++ b/index.html
@@ -14,15 +14,6 @@
 		<script type="text/javascript" src="js/idangerous.swiper.min.js"></script>
 		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places,geometry&sensor=true"></script>
 		<script type="text/javascript" src="js/googlemap.js"></script>
-		<script type="text/javascript">
-			var slides = new Array(
-				"test0",
-				"test1",
-				"test2",
-				"test3",
-				"test4"
-			);
-		</script>
 		<script type="text/javascript" src="js/script.js"></script>
 		<script type="text/javascript">
 			app.initialize();
@@ -35,7 +26,7 @@
 					<div class="sidebar-arrow"><a data-swipe="right"><img src="img/sidebar-arrow-right.png" alt=""></a><p>Kategorie katalogu</p></div>
 					<ul>
 						<li><span class="section section_1"></span> <a href="#">Dla kobiet</a></li>
-						<li><span class="section section_2"></span> <a href="pages/kaski_i_intercomy/index.html">Kaski i intercomy</a></li>
+						<li><span class="section section_2"></span> <a href="#">Kaski i intercomy</a></li>
 						<li><span class="section section_3"></span> <a href="#">Kombinezony skórzane</a></li>
 						<li><span class="section section_4"></span> <a href="#">Kurtki skórzane</a></li>
 						<li><span class="section section_5"></span> <a href="#">Komplety tekstylne</a></li>
