--- a/pages/buty/index.html
+++ b/pages/buty/index.html
@@ -6,9 +6,7 @@
 		<title>Inter Motors Katalog 2014</title>
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="../../images/ico/apple-touch-icon-144-precomposed.png">
 		<link rel="stylesheet" type="text/css" href="../../css/jquery.mobile-1.4.1.min.css" />
-		<!--<link rel="stylesheet" type="text/css" href="../../css/style.css" />-->
-		<link rel="stylesheet" type="text/css" href="../../css/tomek.css" />
-		<link rel="stylesheet" type="text/css" href="../../css/bootstrap_grid.css" />
+		<link rel="stylesheet" type="text/css" href="../../css/style.css" />
 		<script type="text/javascript" src="phonegap.js"></script>
 		<script type="text/javascript" src="../../js/jquery.js"></script>
 		<script type="text/javascript" src="../../js/index.js"></script>
@@ -29,56 +27,54 @@
     </head>
     <body>
 		<div data-role="page" class="ui-page-active">
-			
-				<aside class="left-sidebar">
-					<div class="sidebar-arrow"><a data-swipe="right"><img src="../../img/sidebar-arrow-right.png" alt=""></a><p>Kategorie</p></div>
-					<ul>
-						<li><span class="section section_1"></span> <a href="#">Dla kobiet</a></li>
-						<li><span class="section section_2"></span> <a href="pages/kaski_i_intercomy/index.html">Kaski i intercomy</a></li>
-						<li><span class="section section_3"></span> <a href="#">Kombinezony skórzane</a></li>
-						<li><span class="section section_4"></span> <a href="#">Kurtki skórzane</a></li>
-						<li><span class="section section_5"></span> <a href="#">Komplety tekstylne</a></li>
-						<li><span class="section section_6"></span> <a href="#">Kurtki tekstylne i kamizelki</a></li>
-						<li><span class="section section_7"></span> <a href="#">Spodnie skórzane</a></li>
-						<li><span class="section section_8"></span> <a href="#">Spodnie tekstylne</a></li>
-						<li><span class="section section_9"></span> <a href="#">Rękawice</a></li>
-						<li><span class="section section_10"></span> <a href="pages/buty/index.html">Buty</a></li>
-						<li><span class="section section_11"></span> <a href="#">Ochraniacze</a></li>
-						<li><span class="section section_12"></span> <a href="#">Ubrania przeciwdeszczowe</a></li>
-						<li><span class="section section_13"></span> <a href="#">Odzież termoaktywna</a></li>
-						<li><span class="section section_14"></span> <a href="#">Odzież codzienna</a></li>
-						<li><span class="section section_15"></span> <a href="#">Bagaż</a></li>
-						<li><span class="section section_16"></span> <a href="#">Akcesoria</a></li>
-						<li><span class="section section_17"></span> <a href="#">Off-Road</a></li>
-					</ul>
-				</aside>
-				<aside class="right-sidebar">
-					<div class="sidebar-arrow"><a data-swipe="left"><img src="../../img/sidebar-arrow-left.png" alt=""></a><p>Ustalanie pozycji...</p></div>
-					<div class="map-outer"><div id="map_canvas" class="loading"></div></div>
-				</aside>
-				<div class="content white-bg">
-					<header>
-						<div class="controls controls1">
-							<a data-swipe="right"><img src="../../img/icon-toggle.png" alt=""></a>
-						</div>
-						<a href="../../index.html" class="logo"><img src="../../img/logo-header.png" alt=""></a>
-						<div class="controls controls2">
-							<a data-swipe="left"><img src="../../img/icon-map.png" alt=""></a>
-						</div>
-					</header>
-					<div id="main_bar" class="section_10">
-						<h1>Buty</h1>
+			<aside class="left-sidebar">
+				<div class="sidebar-arrow"><a data-swipe="right"><img src="../../img/sidebar-arrow-right.png" alt=""></a><p>Kategorie</p></div>
+				<ul>
+					<li><span class="section section_1"></span> <a href="#">Dla kobiet</a></li>
+					<li><span class="section section_2"></span> <a href="pages/kaski_i_intercomy/index.html">Kaski i intercomy</a></li>
+					<li><span class="section section_3"></span> <a href="#">Kombinezony skórzane</a></li>
+					<li><span class="section section_4"></span> <a href="#">Kurtki skórzane</a></li>
+					<li><span class="section section_5"></span> <a href="#">Komplety tekstylne</a></li>
+					<li><span class="section section_6"></span> <a href="#">Kurtki tekstylne i kamizelki</a></li>
+					<li><span class="section section_7"></span> <a href="#">Spodnie skórzane</a></li>
+					<li><span class="section section_8"></span> <a href="#">Spodnie tekstylne</a></li>
+					<li><span class="section section_9"></span> <a href="#">Rękawice</a></li>
+					<li><span class="section section_10"></span> <a href="index.html">Buty</a></li>
+					<li><span class="section section_11"></span> <a href="#">Ochraniacze</a></li>
+					<li><span class="section section_12"></span> <a href="#">Ubrania przeciwdeszczowe</a></li>
+					<li><span class="section section_13"></span> <a href="#">Odzież termoaktywna</a></li>
+					<li><span class="section section_14"></span> <a href="#">Odzież codzienna</a></li>
+					<li><span class="section section_15"></span> <a href="#">Bagaż</a></li>
+					<li><span class="section section_16"></span> <a href="#">Akcesoria</a></li>
+					<li><span class="section section_17"></span> <a href="#">Off-Road</a></li>
+				</ul>
+			</aside>
+			<aside class="right-sidebar">
+				<div class="sidebar-arrow"><a data-swipe="left"><img src="../../img/sidebar-arrow-left.png" alt=""></a><p>Ustalanie pozycji...</p></div>
+				<div class="map-outer"><div id="map_canvas" class="loading"></div></div>
+			</aside>
+			<div class="content white-bg">
+				<header>
+					<div class="controls controls1">
+						<a data-swipe="right"><img src="../../img/icon-toggle.png" alt=""></a>
 					</div>
-					<div id="sub_bar">
-						<a class="arrow-right"><img src="../../img/sidebar-arrow-right.png" alt=""></a>
-						<a class="arrow-left"><img src="../../img/sidebar-arrow-left.png" alt=""></a>
-						<span class="actual_slide">1</span> / <span class="slides_left"></span>
+					<a href="../../index.html" class="logo"><img src="../../img/logo-header.png" alt=""></a>
+					<div class="controls controls2">
+						<a data-swipe="left"><img src="../../img/icon-map.png" alt=""></a>
 					</div>
-					<div class="swiper-container">
-						<div class="swiper-wrapper"></div>
-					</div>
+				</header>
+				<div id="main_bar" class="section_10">
+					<h1>Buty</h1>
 				</div>
-			
+				<div id="sub_bar">
+					<a class="arrow-right"><img src="../../img/sidebar-arrow-right.png" alt=""></a>
+					<a class="arrow-left"><img src="../../img/sidebar-arrow-left.png" alt=""></a>
+					<span class="actual_slide">1</span> / <span class="slides_left"></span>
+				</div>
+				<div class="swiper-container">
+					<div class="swiper-wrapper"></div>
+				</div>
+			</div>
 		</div>
     </body>
 </html>
