--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </head>
     <body>
 		<div data-role="page" class="ui-page-active">
-			<aside class="left-sidebar">
+			<aside class="left-sidebar" id="leftSidebar">
 				<div class="sidebar-arrow"><a data-swipe="right"><img src="img/sidebar-arrow-right.png" alt=""></a><p>Kategorie katalogu</p></div>
 				<ul>
 					<li><span class="section section_1"></span> <a href="#">Dla kobiet</a></li>
@@ -43,7 +43,7 @@
 					<li><span class="section section_17"></span> <a href="#">Off-Road</a></li>
 				</ul>
 			</aside>
-			<aside class="right-sidebar">
+			<aside class="right-sidebar" id="rightSidebar">
 				<div class="sidebar-arrow"><a data-swipe="left"><img src="img/sidebar-arrow-left.png" alt=""></a><p>Ustalanie pozycji...</p></div>
 				<div class="map-outer"><div id="map_canvas" class="loading"></div></div>
 			</aside>
