--- a/pages/buty/index.html
+++ b/pages/buty/index.html
@@ -26,7 +26,7 @@
 		</script>
     </head>
     <body>
-		<div data-role="page" class="ui-page-active">
+		<div data-role="page" class="ui-page-active white-bg">
 			<aside class="left-sidebar">
 				<div class="sidebar-arrow"><a data-swipe="right"><img src="../../img/sidebar-arrow-right.png" alt=""></a><p>Kategorie</p></div>
 				<ul>
