--- a/pages/buty/crx.html
+++ b/pages/buty/crx.html
@@ -1,4 +1,5 @@
 <div class="swiper-slide">
+	<div class="a">
 	<div class="row">
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12 col-lg-offset-4 col-md-offset-6 col-sm-offset-6">
 			<p class="title-a main-color10 dinpro-light">CRX</p>
@@ -25,5 +26,6 @@
 				- boczny ochraniacz typu slider<br />
 			</p>
 		</div>
+	</div>
 	</div>
 </div>
