--- a/pages/buty/index.html
+++ b/pages/buty/index.html
@@ -20,7 +20,7 @@
 				"sbr_210.html"
 			);
 		</script>
-		<script type="text/javascript" src="../../js/script.js"></script>
+		<script type="text/javascript" src="../../js/script.js?v=4"></script>
 		<script type="text/javascript">
 			app.initialize();
 		</script>
