--- a/pages/buty/sbr_210.html
+++ b/pages/buty/sbr_210.html
@@ -6,22 +6,23 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/sbr_210.jpg" alt="CRX" class="img-responsive" />
+			<img src="img/sbr_210.jpg" alt="SBR 210" class="img-responsive" />
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
 				<span class="main-color10 dinpro-medium">KOLOR:</span> <span class="dinpro-light">CZARNY</span><br />
-				<span class="main-color10 dinpro-medium">NR KATALOGOWY:</span> <span class="dinpro-light">A0901/08/10</span><br />
-				<span class="main-color10 dinpro-medium">CENA:</span> <span class="dinpro-light">399 ZŁ</span><br />
-				<span class="main-color10 dinpro-medium">ROZMIARY:</span> <span class="dinpro-light">36-48</span>
+				<span class="main-color10 dinpro-medium">NR KATALOGOWY:</span> <span class="dinpro-light">A0904/10/10</span><br />
+				<span class="main-color10 dinpro-medium">CENA:</span> <span class="dinpro-light">339 ZŁ</span><br />
+				<span class="main-color10 dinpro-medium">ROZMIARY:</span> <span class="dinpro-light">36-47</span>
 			</p>
 			<p>&nbsp;</p>
-			<p>Buty sportowe, wykonane z syntetycznej skóry nie absorbującej wody. Zachowują bardzo dobrą relację jakości do ceny i posiadają wszystkie najważniejsze cechy obuwia, które powinno się stosować do jazdy na motocyklach sportowych i sportowo-turystycznych.</p>
+			<p>Krótkie uniwersalne buty dedykowane do jazdy w ciepłe dni. Tego rodzaju obuwie doceniają szczególnie ci motocykliści, którzy często wykorzystują możliwości użytkowe motocykla do jazdy w mieście i chcą posiadać buty zapewniające im bezpieczeństwo w czasie jazdy oraz komfort i wygodę po zejściu z motocykla. Pod obszernym rzepem znajduje się wiązanie na sznurówki.</p>
 			<p>&nbsp;</p>
 			<p>
-				- wykonane z syntetycznej skóry<br />
-				- zapinane na zamek osłonięty dodatkową patką z rzepem<br />
-				- zewnętrzne ochraniacze goleni, kostek i pięty<br />
+				- wykonane z syntetycznej skóry<br />
+				- zapięcie na sznurówki i patkę z rzepem<br />
+				- zewnętrzny ochraniacz kostek i pięty<br />
+				- usztywniony czubek<br />
 				- boczny ochraniacz typu slider<br />
 			</p>
 		</div>
