--- a/pages/buty/index.html
+++ b/pages/buty/index.html
@@ -12,15 +12,43 @@
 		<script type="text/javascript" src="../../js/index.js"></script>
 		<script type="text/javascript" src="../../js/jquery.mobile-1.4.1.min.js"></script>
 		<script type="text/javascript" src="../../js/idangerous.swiper.min.js"></script>
+		<script type="text/javascript" src="../../js/jquery.magnific-popup.min.js"></script>
 		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places,geometry&sensor=true"></script>
 		<script type="text/javascript" src="../../js/googlemap.js"></script>
 		<script type="text/javascript">
 			var slides = new Array(
+				"s_mx_plus_new.html",
+				"s_mx_6.html",
+				"s_mx_5.html",
+				"s_mx_3.html",
+				"s_mx_2.html",
+				"s_mx_1.html",
+				"s_mx_1_1.html",
+				"toucan_gore_tex.html",
+				"touring_gore_tex.html",
+				"air_plus_gore_tex_xcr.html",
+				"web_gore_tex.html",
+				"new_land_gore_tex.html",
+				"roam_ii.html",
+				"fastback_wp.html",
+				"faster.html",
+				"joy_canvas.html",
+				"classic.html",
+				"1000_v3.html",
+				"desmo_v2.html",
+				"roadster_v3.html",
+				"flat_2.html",
+				"testastretta_mid_ii.html",
+				"sbr_230.html",
+				"ryo_raptor.html",
+				"ryo_one.html",
+				"ryo_gt_wp.html",
 				"crx.html",
-				"sbr_210.html"
+				"sbr_210.html",
+				"gt.html"
 			);
 		</script>
-		<script type="text/javascript" src="../../js/script.js?v=4"></script>
+		<script type="text/javascript" src="../../js/script.js?v=5"></script>
 		<script type="text/javascript">
 			app.initialize();
 		</script>
@@ -30,23 +58,23 @@
 			<aside class="left-sidebar">
 				<div class="sidebar-arrow"><a data-swipe="right"><img src="../../img/sidebar-arrow-right.png" alt=""></a><p>Kategorie</p></div>
 				<ul>
-					<li><span class="section section_1"></span> <a href="#">Dla kobiet</a></li>
-					<li><span class="section section_2"></span> <a href="pages/kaski_i_intercomy/index.html">Kaski i intercomy</a></li>
-					<li><span class="section section_3"></span> <a href="#">Kombinezony skórzane</a></li>
-					<li><span class="section section_4"></span> <a href="#">Kurtki skórzane</a></li>
-					<li><span class="section section_5"></span> <a href="#">Komplety tekstylne</a></li>
-					<li><span class="section section_6"></span> <a href="#">Kurtki tekstylne i kamizelki</a></li>
-					<li><span class="section section_7"></span> <a href="#">Spodnie skórzane</a></li>
-					<li><span class="section section_8"></span> <a href="#">Spodnie tekstylne</a></li>
-					<li><span class="section section_9"></span> <a href="#">Rękawice</a></li>
-					<li><span class="section section_10"></span> <a href="index.html">Buty</a></li>
-					<li><span class="section section_11"></span> <a href="#">Ochraniacze</a></li>
-					<li><span class="section section_12"></span> <a href="#">Ubrania przeciwdeszczowe</a></li>
-					<li><span class="section section_13"></span> <a href="#">Odzież termoaktywna</a></li>
-					<li><span class="section section_14"></span> <a href="#">Odzież codzienna</a></li>
-					<li><span class="section section_15"></span> <a href="#">Bagaż</a></li>
-					<li><span class="section section_16"></span> <a href="#">Akcesoria</a></li>
-					<li><span class="section section_17"></span> <a href="#">Off-Road</a></li>
+					<li><span class="section section_1"></span> <a href="pages/dla_kobiet/index.html" data-ajax="false">Dla kobiet</a></li>
+					<li><span class="section section_2"></span> <a href="pages/kaski_i_intercomy/index.html" data-ajax="false">Kaski i intercomy</a></li>
+					<li><span class="section section_3"></span> <a href="pages/kombinezony_skorzane/index.html" data-ajax="false">Kombinezony skórzane</a></li>
+					<li><span class="section section_4"></span> <a href="pages/kurtki_skorzane/index.html" data-ajax="false">Kurtki skórzane</a></li>
+					<li><span class="section section_5"></span> <a href="pages/komplety_tekstylne/index.html" data-ajax="false">Komplety tekstylne</a></li>
+					<li><span class="section section_6"></span> <a href="pages/kurtki_tekstylne_i_kamizelki/index.html" data-ajax="false">Kurtki tekstylne i kamizelki</a></li>
+					<li><span class="section section_7"></span> <a href="pages/spodnie_skorzane/index.html" data-ajax="false">Spodnie skórzane</a></li>
+					<li><span class="section section_8"></span> <a href="pages/spodnie_tekstylne/index.html" data-ajax="false">Spodnie tekstylne</a></li>
+					<li><span class="section section_9"></span> <a href="pages/rekawice/index.html" data-ajax="false">Rękawice</a></li>
+					<li><span class="section section_10"></span> <a href="pages/buty/index.html" data-ajax="false">Buty</a></li>
+					<li><span class="section section_11"></span> <a href="pages/ochraniacze/index.html" data-ajax="false">Ochraniacze</a></li>
+					<li><span class="section section_12"></span> <a href="pages/ubrania_przeciwdeszczowe/index.html" data-ajax="false">Ubrania przeciwdeszczowe</a></li>
+					<li><span class="section section_13"></span> <a href="pages/odziez_termoaktywna/index.html" data-ajax="false">Odzież termoaktywna</a></li>
+					<li><span class="section section_14"></span> <a href="pages/odziez_codzienna/index.html" data-ajax="false">Odzież codzienna</a></li>
+					<li><span class="section section_15"></span> <a href="pages/bagaz/index.html" data-ajax="false">Bagaż</a></li>
+					<li><span class="section section_16"></span> <a href="pages/akcesoria/index.html" data-ajax="false">Akcesoria</a></li>
+					<li><span class="section section_17"></span> <a href="pages/offroad/index.html" data-ajax="false">Off-Road</a></li>
 				</ul>
 			</aside>
 			<aside class="right-sidebar">
