--- a/pages/buty/air_plus_gore_tex_xcr.html
+++ b/pages/buty/air_plus_gore_tex_xcr.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/air_plus_gore_tex_xcr.jpg" alt="AIR PLUS GORE-TEX XCR" class="img-responsive" />
+			<a href="img/air_plus_gore_tex_xcr.jpg" class="magnificPopup" title="AIR PLUS GORE-TEX XCR" data-slide="air_plus_gore_tex_xcr.html"><img src="img/air_plus_gore_tex_xcr.jpg" alt="AIR PLUS GORE-TEX XCR" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
