--- a/pages/buty/classic.html
+++ b/pages/buty/classic.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/classic.jpg" alt="CLASSIC" class="img-responsive" />
+			<a href="img/classic.jpg" class="magnificPopup" title="CLASSIC" data-slide="classic.html"><img src="img/classic.jpg" alt="CLASSIC" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="visible-xs">&nbsp;</p>
@@ -39,7 +39,7 @@
 				<span class="main-color10 dinpro-medium">ROZMIARY:</span> <span class="dinpro-light">7-13</span>
 			</p>
 			<p class="visible-xs">&nbsp;</p>
-			<p><img src="img/classic_2.jpg" alt="CLASSIC" class="img-responsive" /></p>
+			<p><a href="img/classic_2.jpg" class="magnificPopup" title="CLASSIC" data-slide="classic.html"><img src="img/classic_2.jpg" alt="CLASSIC" class="img-responsive" /></a></p>
 			<div class="clearfix"></div>
 		</div>
 	</div>
