--- a/pages/buty/desmo_v2.html
+++ b/pages/buty/desmo_v2.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/desmo_v2.jpg" alt="DESMO V2" class="img-responsive" />
+			<a href="img/desmo_v2.jpg" class="magnificPopup" title="DESMO V2" data-slide="desmo_v2.html"><img src="img/desmo_v2.jpg" alt="DESMO V2" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
@@ -41,7 +41,7 @@
 				<span class="main-color10 dinpro-medium">CENA:</span> <span class="dinpro-light">839 ZŁ</span><br />
 				<span class="main-color10 dinpro-medium">ROZMIARY:</span> <span class="dinpro-light">38-47</span>
 			</p>
-			<p><img src="img/desmo_v2_gore_tex.jpg" alt="ROADSTER V3 GORE TEX" class="img-responsive" /></p>
+			<p><a href="img/desmo_v2_gore_tex.jpg" class="magnificPopup" title="DESMO V2 GORE TEX" data-slide="desmo_v2.html"><img src="img/desmo_v2_gore_tex.jpg" alt="DESMO V2 GORE TEX" class="img-responsive" /></a></p>
 			<div class="clearfix"></div>
 		</div>
 	</div>
