--- a/pages/buty/faster.html
+++ b/pages/buty/faster.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/faster.jpg" alt="FASTER" class="img-responsive" />
+			<a href="img/faster.jpg" class="magnificPopup" title="FASTER" data-slide="faster.html"><img src="img/faster.jpg" alt="FASTER" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="visible-xs">&nbsp;</p>
@@ -38,7 +38,7 @@
 				<span class="main-color10 dinpro-medium">ROZMIARY:</span> <span class="dinpro-light">7-13</span>
 			</p>
 			<p class="visible-xs">&nbsp;</p>
-			<p><img src="img/faster_2.jpg" alt="FASTER" class="img-responsive" /></p>
+			<p><a href="img/faster_2.jpg" class="magnificPopup" title="FASTER" data-slide="faster.html"><img src="img/faster_2.jpg" alt="FASTER" class="img-responsive" /></a></p>
 			<div class="clearfix"></div>
 		</div>
 	</div>
