--- a/pages/buty/flat_2.html
+++ b/pages/buty/flat_2.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/flat_2.jpg" alt="FLAT 2" class="img-responsive" />
+			<a href="img/flat_2.jpg" class="magnificPopup" title="FLAT 2" data-slide="flat_2.html"><img src="img/flat_2.jpg" alt="FLAT 2" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
