--- a/pages/buty/index.html
+++ b/pages/buty/index.html
@@ -17,6 +17,7 @@
 		<script type="text/javascript" src="../../js/googlemap.js"></script>
 		<script type="text/javascript">
 			var slides = new Array(
+				"supertech_r.html",
 				"s_mx_plus_new.html",
 				"s_mx_6.html",
 				"s_mx_5.html",
@@ -48,7 +49,7 @@
 				"gt.html"
 			);
 		</script>
-		<script type="text/javascript" src="../../js/script.js?v=5"></script>
+		<script type="text/javascript" src="../../js/script.js?v=7"></script>
 		<script type="text/javascript">
 			app.initialize();
 		</script>
