--- a/pages/buty/new_land_gore_tex.html
+++ b/pages/buty/new_land_gore_tex.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/new_land_gore_tex.jpg" alt="NEW LAND GORE-TEX" class="img-responsive" />
+			<a href="img/new_land_gore_tex.jpg" class="magnificPopup" title="NEW LAND GORE-TEX" data-slide="new_land_gore_tex.html"><img src="img/new_land_gore_tex.jpg" alt="NEW LAND GORE-TEX" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
