--- a/pages/buty/roam_ii.html
+++ b/pages/buty/roam_ii.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/roam_ii.jpg" alt="ROAM II" class="img-responsive" />
+			<a href="img/roam_ii.jpg" class="magnificPopup" title="ROAM II" data-slide="roam_ii.html"><img src="img/roam_ii.jpg" alt="ROAM II" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
