--- a/pages/buty/ryo_one.html
+++ b/pages/buty/ryo_one.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/ryo_one.jpg" alt="RYO ONE" class="img-responsive" />
+			<a href="img/ryo_one.jpg" class="magnificPopup" title="RYO ONE" data-slide="ryo_one.html"><img src="img/ryo_one.jpg" alt="RYO ONE" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
