--- a/pages/buty/ryo_raptor.html
+++ b/pages/buty/ryo_raptor.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/ryo_raptor.jpg" alt="RYO RAPTOR" class="img-responsive" />
+			<a href="img/ryo_raptor.jpg" class="magnificPopup" title="RYO RAPTOR" data-slide="ryo_raptor.html"><img src="img/ryo_raptor.jpg" alt="RYO RAPTOR" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
