--- a/pages/buty/s_mx_1.html
+++ b/pages/buty/s_mx_1.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/s_mx_1.jpg" alt="S-MX 1" class="img-responsive" />
+			<a href="img/s_mx_1.jpg" class="magnificPopup" title="S-MX 1" data-slide="s_mx_1.html"><img src="img/s_mx_1.jpg" alt="S-MX 1" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
