--- a/pages/buty/s_mx_2.html
+++ b/pages/buty/s_mx_2.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/s_mx_2.jpg" alt="S-MX 2" class="img-responsive" />
+			<a href="img/s_mx_2.jpg" class="magnificPopup" title="S-MX 2" data-slide="s_mx_2.html"><img src="img/s_mx_2.jpg" alt="S-MX 2" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="visible-xs">&nbsp;</p>
@@ -41,7 +41,7 @@
 				<span class="main-color10 dinpro-medium">ROZMIARY:</span> <span class="dinpro-light">38-50</span>
 			</p>
 			<p class="visible-xs">&nbsp;</p>
-			<p><img src="img/s_mx_2_2.jpg" alt="S-MX 2" class="img-responsive" /></p>
+			<p><a href="img/s_mx_2_2.jpg" class="magnificPopup" title="S-MX 2" data-slide="s_mx_2.html"><img src="img/s_mx_2_2.jpg" alt="S-MX 2" class="img-responsive" /></a></p>
 			<div class="clearfix"></div>
 		</div>
 	</div>
