--- a/pages/buty/s_mx_3.html
+++ b/pages/buty/s_mx_3.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/s_mx_3.jpg" alt="S-MX 3" class="img-responsive" />
+			<a href="img/s_mx_3.jpg" class="magnificPopup" title="S-MX 3" data-slide="s_mx_3.html"><img src="img/s_mx_3.jpg" alt="S-MX 3" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="visible-xs">&nbsp;</p>
