--- a/pages/buty/s_mx_plus_new.html
+++ b/pages/buty/s_mx_plus_new.html
@@ -33,7 +33,7 @@
 	<hr />
 	<div class="row">
 		<div class="col-sm-3 col-xs-12">
-			<p><a href="img/s_mx_plus_new_1.jpg" class="magnificPopup" title="MAGNESIUM SLIDER" data-slide="s_mx_plus_new.html"><img src="img/s_mx_plus_new_1.jpg" alt="S-MX PLUS NEW" class="img-responsive" /></a></p>
+			<p><a href="img/magnesium_slider.jpg" class="magnificPopup" title="MAGNESIUM SLIDER" data-slide="s_mx_plus_new.html"><img src="img/magnesium_slider.jpg" alt="MAGNESIUM SLIDER" class="img-responsive" /></a></p>
 			<p class="visible-xs">&nbsp;</p>
 			<p class="title-b">
 				<span class="main-color10 dinpro-light">MAGNESIUM SLIDER</span><br />
@@ -45,7 +45,7 @@
 			<hr class="visible-xs" />
 		</div>
 		<div class="col-sm-3 col-xs-12">
-			<p><a href="img/s_mx_plus_new_2.jpg" class="magnificPopup" title="S-MX PLUS NEW - BIAŁO-CZARNO-ŻÓŁTY FLUO" data-slide="s_mx_plus_new.html"><img src="img/s_mx_plus_new_2.jpg" alt="S-MX PLUS NEW" class="img-responsive" /></a></p>
+			<p><a href="img/s_mx_plus_new_1.jpg" class="magnificPopup" title="S-MX PLUS NEW - BIAŁO-CZARNO-ŻÓŁTY FLUO" data-slide="s_mx_plus_new.html"><img src="img/s_mx_plus_new_1.jpg" alt="S-MX PLUS NEW" class="img-responsive" /></a></p>
 			<p class="visible-xs">&nbsp;</p>
 			<p class="title-b">
 				<span class="main-color10 dinpro-medium">KOLOR:</span> <span class="dinpro-light">BIAŁO-CZARNO-ŻÓŁTY FLUO</span><br />
@@ -56,7 +56,7 @@
 			<hr class="visible-xs" />
 		</div>
 		<div class="col-sm-3 col-xs-12">
-			<p><a href="img/s_mx_plus_new_3.jpg" class="magnificPopup" title="S-MX PLUS NEW - CZARNY" data-slide="s_mx_plus_new.html"><img src="img/s_mx_plus_new_3.jpg" alt="S-MX PLUS NEW" class="img-responsive" /></a></p>
+			<p><a href="img/s_mx_plus_new_2.jpg" class="magnificPopup" title="S-MX PLUS NEW - CZARNY" data-slide="s_mx_plus_new.html"><img src="img/s_mx_plus_new_2.jpg" alt="S-MX PLUS NEW" class="img-responsive" /></a></p>
 			<p class="visible-xs">&nbsp;</p>
 			<p class="title-b">
 				<span class="dinpro-medium">WERSJA Z GORE-TEX®</span><br />
@@ -68,7 +68,7 @@
 			<hr class="visible-xs" />
 		</div>
 		<div class="col-sm-3 col-xs-12">
-			<p><a href="img/s_mx_plus_new_4.jpg" class="magnificPopup" title="S-MX PLUS NEW - BIAŁO-CZARNY" data-slide="s_mx_plus_new.html"><img src="img/s_mx_plus_new_4.jpg" alt="S-MX PLUS NEW" class="img-responsive" /></a></p>
+			<p><a href="img/s_mx_plus_new_3.jpg" class="magnificPopup" title="S-MX PLUS NEW - BIAŁO-CZARNY" data-slide="s_mx_plus_new.html"><img src="img/s_mx_plus_new_3.jpg" alt="S-MX PLUS NEW" class="img-responsive" /></a></p>
 			<p class="visible-xs">&nbsp;</p>
 			<p class="title-b">
 				<span class="main-color10 dinpro-medium">KOLOR:</span> <span class="dinpro-light">BIAŁO-CZARNY</span><br />
