--- a/pages/buty/sbr_210.html
+++ b/pages/buty/sbr_210.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/sbr_210.jpg" alt="SBR 210" class="img-responsive" />
+			<a href="img/sbr_210.jpg" class="magnificPopup" title="SBR 210" data-slide="sbr_210.html"><img src="img/sbr_210.jpg" alt="SBR 210" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
