--- a/pages/buty/sbr_230.html
+++ b/pages/buty/sbr_230.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/sbr_230.jpg" alt="SBR 230" class="img-responsive" />
+			<a href="img/sbr_230.jpg" class="magnificPopup" title="SBR 230" data-slide="sbr_230.html"><img src="img/sbr_230.jpg" alt="SBR 230" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
