--- a/pages/buty/testastretta_mid_ii.html
+++ b/pages/buty/testastretta_mid_ii.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/testastretta_mid_ii.jpg" alt="TESTASTRETTA MID II" class="img-responsive" />
+			<a href="img/testastretta_mid_ii.jpg" class="magnificPopup" title="TESTASTRETTA MID II" data-slide="testastretta_mid_ii.html"><img src="img/testastretta_mid_ii.jpg" alt="TESTASTRETTA MID II" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
