--- a/pages/buty/1000_v3.html
+++ b/pages/buty/1000_v3.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/1000_v3.jpg" alt="1000 V3" class="img-responsive" />
+			<a href="img/1000_v3.jpg" class="magnificPopup" title="1000 V3" data-slide="1000_v3.html"><img src="img/1000_v3.jpg" alt="1000 V3" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
