--- a/pages/buty/crx.html
+++ b/pages/buty/crx.html
@@ -7,7 +7,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/crx.jpg" alt="CRX" class="img-responsive" />
+			<a href="img/crx.jpg" class="magnificPopup" title="CRX" data-slide="crx.html"><img src="img/crx.jpg" alt="CRX" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
