--- a/pages/buty/gt.html
+++ b/pages/buty/gt.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/gt.jpg" alt="GT" class="img-responsive" />
+			<a href="img/gt.jpg" class="magnificPopup" title="GT" data-slide="gt.html"><img src="img/gt.jpg" alt="GT" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
