--- a/pages/buty/joy_canvas.html
+++ b/pages/buty/joy_canvas.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/joy_canvas.jpg" alt="JOY CANVAS" class="img-responsive" />
+			<a href="img/joy_canvas.jpg" class="magnificPopup" title="JOY CANVAS" data-slide="joy_canvas.html"><img src="img/joy_canvas.jpg" alt="JOY CANVAS" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
