--- a/pages/buty/roadster_v3.html
+++ b/pages/buty/roadster_v3.html
@@ -6,7 +6,7 @@
 	</div>
 	<div class="row">
 		<div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-			<img src="img/roadster_v3.jpg" alt="ROADSTER V3" class="img-responsive" />
+			<a href="img/roadster_v3.jpg" class="magnificPopup" title="ROADSTER V3" data-slide="roadster_v3.html"><img src="img/roadster_v3.jpg" alt="ROADSTER V3" class="img-responsive" /></a>
 		</div>
 		<div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
 			<p class="title-b">
@@ -38,7 +38,7 @@
 				<span class="main-color10 dinpro-medium">CENA:</span> <span class="dinpro-light">799 ZŁ</span><br />
 				<span class="main-color10 dinpro-medium">ROZMIARY:</span> <span class="dinpro-light">38-47</span>
 			</p>
-			<p><img src="img/roadster_v3_gore_tex.jpg" alt="ROADSTER V3 GORE TEX" class="img-responsive" /></p>
+			<p><a href="img/roadster_v3_gore_tex.jpg" class="magnificPopup" title="ROADSTER V3 GORE TEX" data-slide="roadster_v3.html"><img src="img/roadster_v3_gore_tex.jpg" alt="ROADSTER V3 GORE TEX" class="img-responsive" /></a></p>
 			<div class="clearfix"></div>
 		</div>
 	</div>
