podglądówka dla Borka

--- a/pages/buty/index.html
+++ b/pages/buty/index.html
@@ -59,23 +59,23 @@
 			<aside class="left-sidebar">
 				<div class="sidebar-arrow"><a data-swipe="right"><img src="../../img/sidebar-arrow-right.png" alt=""></a><p>Kategorie</p></div>
 				<ul>
-					<li><span class="section section_1"></span> <a href="pages/dla_kobiet/index.html" data-ajax="false">Dla kobiet</a></li>
-					<li><span class="section section_2"></span> <a href="pages/kaski_i_intercomy/index.html" data-ajax="false">Kaski i intercomy</a></li>
-					<li><span class="section section_3"></span> <a href="pages/kombinezony_skorzane/index.html" data-ajax="false">Kombinezony skórzane</a></li>
-					<li><span class="section section_4"></span> <a href="pages/kurtki_skorzane/index.html" data-ajax="false">Kurtki skórzane</a></li>
-					<li><span class="section section_5"></span> <a href="pages/komplety_tekstylne/index.html" data-ajax="false">Komplety tekstylne</a></li>
-					<li><span class="section section_6"></span> <a href="pages/kurtki_tekstylne_i_kamizelki/index.html" data-ajax="false">Kurtki tekstylne i kamizelki</a></li>
-					<li><span class="section section_7"></span> <a href="pages/spodnie_skorzane/index.html" data-ajax="false">Spodnie skórzane</a></li>
-					<li><span class="section section_8"></span> <a href="pages/spodnie_tekstylne/index.html" data-ajax="false">Spodnie tekstylne</a></li>
-					<li><span class="section section_9"></span> <a href="pages/rekawice/index.html" data-ajax="false">Rękawice</a></li>
-					<li><span class="section section_10"></span> <a href="pages/buty/index.html" data-ajax="false">Buty</a></li>
-					<li><span class="section section_11"></span> <a href="pages/ochraniacze/index.html" data-ajax="false">Ochraniacze</a></li>
-					<li><span class="section section_12"></span> <a href="pages/ubrania_przeciwdeszczowe/index.html" data-ajax="false">Ubrania przeciwdeszczowe</a></li>
-					<li><span class="section section_13"></span> <a href="pages/odziez_termoaktywna/index.html" data-ajax="false">Odzież termoaktywna</a></li>
-					<li><span class="section section_14"></span> <a href="pages/odziez_codzienna/index.html" data-ajax="false">Odzież codzienna</a></li>
-					<li><span class="section section_15"></span> <a href="pages/bagaz/index.html" data-ajax="false">Bagaż</a></li>
-					<li><span class="section section_16"></span> <a href="pages/akcesoria/index.html" data-ajax="false">Akcesoria</a></li>
-					<li><span class="section section_17"></span> <a href="pages/offroad/index.html" data-ajax="false">Off-Road</a></li>
+					<li><span class="section section_1"></span> <a href="../../pages/dla_kobiet/index.html" data-ajax="false">Dla kobiet</a></li>
+					<li><span class="section section_2"></span> <a href="../../pages/kaski_i_intercomy/index.html" data-ajax="false">Kaski i intercomy</a></li>
+					<li><span class="section section_3"></span> <a href="../../pages/kombinezony_skorzane/index.html" data-ajax="false">Kombinezony skórzane</a></li>
+					<li><span class="section section_4"></span> <a href="../../pages/kurtki_skorzane/index.html" data-ajax="false">Kurtki skórzane</a></li>
+					<li><span class="section section_5"></span> <a href="../../pages/komplety_tekstylne/index.html" data-ajax="false">Komplety tekstylne</a></li>
+					<li><span class="section section_6"></span> <a href="../../pages/kurtki_tekstylne_i_kamizelki/index.html" data-ajax="false">Kurtki tekstylne i kamizelki</a></li>
+					<li><span class="section section_7"></span> <a href="../../pages/spodnie_skorzane/index.html" data-ajax="false">Spodnie skórzane</a></li>
+					<li><span class="section section_8"></span> <a href="../../pages/spodnie_tekstylne/index.html" data-ajax="false">Spodnie tekstylne</a></li>
+					<li><span class="section section_9"></span> <a href="../../pages/rekawice/index.html" data-ajax="false">Rękawice</a></li>
+					<li><span class="section section_10"></span> <a href="index.html" data-ajax="false">Buty</a></li>
+					<li><span class="section section_11"></span> <a href="../../pages/ochraniacze/index.html" data-ajax="false">Ochraniacze</a></li>
+					<li><span class="section section_12"></span> <a href="../../pages/ubrania_przeciwdeszczowe/index.html" data-ajax="false">Ubrania przeciwdeszczowe</a></li>
+					<li><span class="section section_13"></span> <a href="../../pages/odziez_termoaktywna/index.html" data-ajax="false">Odzież termoaktywna</a></li>
+					<li><span class="section section_14"></span> <a href="../../pages/odziez_codzienna/index.html" data-ajax="false">Odzież codzienna</a></li>
+					<li><span class="section section_15"></span> <a href="../../pages/bagaz/index.html" data-ajax="false">Bagaż</a></li>
+					<li><span class="section section_16"></span> <a href="../../pages/akcesoria/index.html" data-ajax="false">Akcesoria</a></li>
+					<li><span class="section section_17"></span> <a href="../../pages/offroad/index.html" data-ajax="false">Off-Road</a></li>
 				</ul>
 			</aside>
 			<aside class="right-sidebar">
