--- a/pages/spodnie_tekstylne/index.html
+++ b/pages/spodnie_tekstylne/index.html
@@ -6,24 +6,55 @@
 		<title>Inter Motors Katalog 2014</title>
 		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="../../images/ico/apple-touch-icon-144-precomposed.png">
 		<link rel="stylesheet" type="text/css" href="../../css/jquery.mobile-1.4.1.min.css" />
-		<link rel="stylesheet" href="../../css/swipebox.css">
 		<link rel="stylesheet" type="text/css" href="../../css/style.css" />
 		<script type="text/javascript" src="phonegap.js"></script>
 		<script type="text/javascript" src="../../js/jquery.js"></script>
-		<script src="../../js/jquery.swipebox.min.js"></script>
 		<script type="text/javascript" src="../../js/index.js"></script>
 		<script type="text/javascript" src="../../js/jquery.mobile-1.4.1.min.js"></script>
 		<script type="text/javascript" src="../../js/idangerous.swiper.min.js"></script>
+		<script type="text/javascript" src="../../js/jquery.magnific-popup.min.js"></script>
 		<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places,geometry&sensor=true"></script>
 		<script type="text/javascript" src="../../js/googlemap.js"></script>
 		<script type="text/javascript">
 			var slides = new Array(
-				"namea.html",
-				"nameb.html",
-				"namec.html"
+				"tech_road_gore_tex.html"
+				,"durban_gore_tex.html"
+				,"new_land_gore_tex.html"
+				,"calama_drystar.html"
+				,"a_10_air_flo.html"
+				,"courmayeur_gtx.html"
+				,"valparaiso_drystar.html"
+				,"bregenz_drystar.html"
+				,"andes_drystar.html"
+				,"hellcat_kevlar_jeans.html"
+				,"resist_kevlar_jeans.html"
+				,"bedoine.html"
+				,"mercury.html"
+				,"club.html"
+				,"ambitious_sport.html"
+				,"climber_fly_hp.html"
+				,"climber_fly.html"
+				,"summit.html"
+				,"challenger.html"
+				,"sawyer.html"
+				,"evil_jeans.html"
+				,"chicago.html"
+				,"alaska.html"
+				,"gladiator.html"
+				,"block_pro.html"
+				,"ram.html"
+				,"sunset.html"
+				,"kid.html"
+				,"stube_kevlar.html"
+				,"road_vintage.html"
+				,"jeans_road_classic.html"
+				,"black_fighter.html"
+				,"black_star.html"
+				,"black_kevlar.html"
+				,"piston.html"
 			);
 		</script>
-		<script type="text/javascript" src="../../js/script.js?v=3"></script>
+		<script type="text/javascript" src="../../js/script.js?v=8"></script>
 		<script type="text/javascript">
 			app.initialize();
 		</script>
@@ -40,7 +71,7 @@
 					<li><span class="section section_5"></span> <a href="../../pages/komplety_tekstylne/index.html" data-ajax="false">Komplety tekstylne</a></li>
 					<li><span class="section section_6"></span> <a href="../../pages/kurtki_tekstylne_i_kamizelki/index.html" data-ajax="false">Kurtki tekstylne i kamizelki</a></li>
 					<li><span class="section section_7"></span> <a href="../../pages/spodnie_skorzane/index.html" data-ajax="false">Spodnie skórzane</a></li>
-					<li><span class="section section_8"></span> <a href="../../pages/spodnie_tekstylne/index.html" data-ajax="false">Spodnie tekstylne</a></li>
+					<li><span class="section section_8"></span> <a href="index.html" data-ajax="false">Spodnie tekstylne</a></li>
 					<li><span class="section section_9"></span> <a href="../../pages/rekawice/index.html" data-ajax="false">Rękawice</a></li>
 					<li><span class="section section_10"></span> <a href="../../pages/buty/index.html" data-ajax="false">Buty</a></li>
 					<li><span class="section section_11"></span> <a href="../../pages/ochraniacze/index.html" data-ajax="false">Ochraniacze</a></li>
@@ -66,8 +97,8 @@
 						<a data-swipe="left"><img src="../../img/icon-map.png" alt=""></a>
 					</div>
 				</header>
-				<div id="main_bar" class="section_1">
-					<h1>Dla kobiet</h1>
+				<div id="main_bar" class="section_7">
+					<h1>Spodnie skórzane</h1>
 				</div>
 				<div id="sub_bar">
 					<a class="arrow-right"><img src="../../img/sidebar-arrow-right.png" alt=""></a>
