--- a/pages/spodnie_skorzane/index.html
+++ b/pages/spodnie_skorzane/index.html
@@ -39,103 +39,103 @@
 				<div class="sidebar-arrow"><a data-swipe="right"><img src="../../img/sidebar-arrow-right.png" alt=""></a><p>Kategorie katalogu</p></div>
 				<div class="main-categories" style="margin-top:46px">
 					<div class="category-icon">
-						<a href="pages/dla_kobiet/index.html" data-ajax="false">
+						<a href="../../pages/dla_kobiet/index.html" data-ajax="false">
 							<img src="../../img/kategorie/dla-kobiet.png" alt="" />
 							<p>Dla<br />kobiet</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/kaski_i_intercomy/index.html" data-ajax="false">
+						<a href="../../pages/kaski_i_intercomy/index.html" data-ajax="false">
 							<img src="../../img/kategorie/kaski-i-intercomy.png" alt="" />
 							<p>Kaski<br />i intercomy</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/kombinezony_skorzane/index.html" data-ajax="false">
+						<a href="../../pages/kombinezony_skorzane/index.html" data-ajax="false">
 							<img src="../../img/kategorie/kombinezony-skorzane.png" alt="" />
 							<p>Kombinezony<br />skórzane</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/kurtki_skorzane/index.html" data-ajax="false">
+						<a href="../../pages/kurtki_skorzane/index.html" data-ajax="false">
 							<img src="../../img/kategorie/kurtki-skorzane.png" alt="" />
 							<p>Kurtki<br />skórzane</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/komplety_tekstylne/index.html" data-ajax="false">
+						<a href="../../pages/komplety_tekstylne/index.html" data-ajax="false">
 							<img src="../../img/kategorie/komplety-tekstylne.png" alt="" />
 							<p>Komplety<br />tekstylne</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/kurtki_tekstylne_i_kamizelki/index.html" data-ajax="false">
+						<a href="../../pages/kurtki_tekstylne_i_kamizelki/index.html" data-ajax="false">
 							<img src="../../img/kategorie/kurtki-tekstylne-i-kamizelki.png" alt="" />
 							<p>Kurtki tekstylne<br />i kamizelki</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/spodnie_skorzane/index.html" data-ajax="false">
+						<a href="../../pages/spodnie_skorzane/index.html" data-ajax="false">
 							<img src="../../img/kategorie/spodnie-skorzane.png" alt="" />
 							<p>Spodnie<br />skórzane</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/spodnie_tekstylne/index.html" data-ajax="false">
+						<a href="../../pages/spodnie_tekstylne/index.html" data-ajax="false">
 							<img src="../../img/kategorie/spodnie-tekstylne.png" alt="" />
 							<p>Spodnie<br />tekstylne</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/rekawice/index.html" data-ajax="false">
+						<a href="../../pages/rekawice/index.html" data-ajax="false">
 							<img src="../../img/kategorie/rekawice.png" alt="" />
 							<p>Rękawice</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/buty/index.html" data-ajax="false">
+						<a href="../../pages/buty/index.html" data-ajax="false">
 							<img src="../../img/kategorie/buty.png" alt="" />
 							<p>Buty</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/ochraniacze/index.html" data-ajax="false">
+						<a href="../../pages/ochraniacze/index.html" data-ajax="false">
 							<img src="../../img/kategorie/ochraniacze.png" alt="" />
 							<p>Ochraniacze</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/ubrania_przeciwdeszczowe/index.html" data-ajax="false">
+						<a href="../../pages/ubrania_przeciwdeszczowe/index.html" data-ajax="false">
 							<img src="../../img/kategorie/ubrania-przeciwdeszczowe.png" alt="" />
 							<p>Ubrania<br />przeciwdeszczowe</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/odziez_termoaktywna/index.html" data-ajax="false">
+						<a href="../../pages/odziez_termoaktywna/index.html" data-ajax="false">
 							<img src="../../img/kategorie/odziez-termoaktywna.png" alt="" />
 							<p>Odzież<br />termoaktywna</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/odziez_codzienna/index.html" data-ajax="false">
+						<a href="../../pages/odziez_codzienna/index.html" data-ajax="false">
 							<img src="../../img/kategorie/odziez-codzienna.png" alt="" />
 							<p>Odzież<br />codzienna</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/bagaz/index.html" data-ajax="false">
+						<a href="../../pages/bagaz/index.html" data-ajax="false">
 							<img src="../../img/kategorie/bagaz.png" alt="" />
 							<p>Bagaż</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/akcesoria/index.html" data-ajax="false">
+						<a href="../../pages/akcesoria/index.html" data-ajax="false">
 							<img src="../../img/kategorie/akcesoria.png" alt="" />
 							<p>Akcesoria</p>
 						</a>
 					</div>
 					<div class="category-icon">
-						<a href="pages/offroad/index.html" data-ajax="false">
+						<a href="../../pages/offroad/index.html" data-ajax="false">
 							<img src="../../img/kategorie/offroad.png" alt="" />
 							<p>Off-road</p>
 						</a>
